update employment, add chem sci image

--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
                     <h2 class="mb-5">Employment</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Calico</h3>
+                            <div class="subheading mb-3">Scientist</div>
+                            <ul class="exp-list-head">
+                                <li class="exp-list-item">
+                                    Coming soon!
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Employment Commences July 2023</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Genentech, BAS-O3M</h3>
                             <div class="subheading mb-3">Research Intern</div>
                             <ul class="exp-list-head">
@@ -137,7 +149,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - April 2023</span></div>
                     </div>
                 </div>
             </section>
@@ -195,7 +207,7 @@
                             </ul>
                             <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - June 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -383,7 +395,7 @@
                     <p class="pub-text">
                         G. Li, C.K. Jeon, M. Ma, Z. Zheng, Y. Jia, Z. Zheng, <b>D.G. Delafield</b>, G. Lu, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
                         "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42." <i>Chemical 
-                        Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlepdf/2023/SC/D3SC00678F?page=search">
+                        Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlelanding/2023/sc/d3sc00678f">
                         10.1039/D3SC00678F</a>
                     </p>
                     <p class="pub-text">
