--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
                                 <p class="card-pub-title">Chemical Science</p>
                                 <p class="card-text">Primary research conferring the significance of D-amino acid participation in AB42 oligomerization and their 
                                     contribution towards cytotoxicity.</p>
-                                <a href="https://pubs.rsc.org/en/content/articlepdf/2023/SC/D3SC00678F?page=search" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                                <a href="https://pubs.rsc.org/en/content/articlelanding/2023/sc/d3sc00678f" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -300,7 +300,7 @@
                         <p class="pub-text">
                             G. Li, C.K. Jeon, M. Ma, Z. Zheng, Y. Jia, Z. Zheng, <b>D.G. Delafield</b>, G. Lu, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
                             "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42." <i>Chemical 
-                            Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlepdf/2023/SC/D3SC00678F?page=search">
+                            Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlelanding/2023/sc/d3sc00678f">
                             10.1039/D3SC00678F</a>
                         </p>
                         <p class="pub-text">
