adding apl manuscript

--- a/portfolio.html
+++ b/portfolio.html
@@ -298,6 +298,11 @@
                             sn-Position-Resolved Lipidomics." In Submission.
                         </p>
                         <p class="pub-text">
+                            S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved Quantification 
+                            of Aminophospholipids in Alzheimer's Disease Progression by Isotopic N, N-dimethyl leucine Labeling and High-resolution Ion Mobility Mass Spectrometry." 
+                            In Submission.
+                        </p>
+                        <p class="pub-text">
                             G. Li, C.K. Jeon, M. Ma, Z. Zheng, Y. Jia, Z. Zheng, <b>D.G. Delafield</b>, G. Lu, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
                             "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42." <i>Chemical 
                             Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlelanding/2023/sc/d3sc00678f">
