--- a/index.html
+++ b/index.html
@@ -328,6 +328,12 @@
                         </button>
                     </div>
                     <p class="pub-text">
+                        <b>D.G. Delafield</b>, H.N. Miles, T.N. Liu, W.A. Ricke, L. Li. “Inclusion of Porous Graphitic Carbon Chromatography Yields Greater 
+                        Protein Identification, Compartment and Process Coverage, and Enables More Reflective Protein-Level Label-Free Quantitation.” Published 
+                        online October 10, 2023. <a href="https://doi.org/10.1021/acs.jproteome.3c00373">10.1021/acs.jproteome.3c00373</a>
+                        (In Submission)
+                    </p>
+                    <p class="pub-text">
                         <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2022). “Higher Temperature Porous Graphitic Carbon Separations 
                         Differentially Impact Distinct Glycopeptide Classes.” <i>Journal for the American Society for Mass Spectrometric</i>. Published online
                         November 30, 2022. <a href="https://doi.org/10.1021/jasms.2c00249">10.1021/jasms.2c00249</a>
@@ -360,11 +366,6 @@
                         <b>D.G. Delafield†</b>, X. Zhong†, L. Li. "Sample Agnostic Spectral Libraries Enable Quantitation of >9,300 Cerebrospinal 
                         Fluid Proteins Across Neurodegenerative Disease Patient Cohorts." (In Submission) († Co-First Authors) <a href="https://grahamdelafield.github.io/assets/img/Posters/ChemPoster2022.png">
                         Poster Available</a>
-                    </p>
-                    <p class="pub-text">
-                        <b>D.G. Delafield</b>, H.N. Miles, T.N. Liu, W.A. Ricke, L. Li. “Inclusion of Porous Graphitic Carbon Chromatography Yields Greater 
-                        Protein Identification, Compartment and Process Coverage, and Enables More Reflective Protein-Level Label-Free Quantitation.” 
-                        (In Submission)
                     </p>
                     <p class="pub-text">
                         <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. “Six-plex Isobaric Labeling Reveals Glycosylation Dysregulation Across 
