--- a/portfolio.html
+++ b/portfolio.html
@@ -92,11 +92,27 @@
                     <h2 class="mb-5">Publications</h2>
                     <div class="card-table">
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/JPR_DataCompleteness_TOC.jpg" alt="JPR Graphical Abstract">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">
+                                    Inclusion of Porous Graphitic Carbon Chromatography Yields Greater Protein Identification, 
+                                    Compartment and Process Coverage, and Enables More Reflective Protein-Level Label-Free Quantitation
+                                </h5>
+                                <p class="card-pub-title">Journal of Proteome Research</p>
+                                <p class="card-text">
+                                    Efforts describing the extent to which utilizing PGC separations recover proteomic information typically 
+                                    lost during RPLC analyses, even with reduced sample complexity.
+                                </p>
+                                <a href="https://doi.org/10.1021/acs.jproteome.3c00373" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Manuscript/JASMS_PGC_2022.png" alt="JASMS Graphical Abstract">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Higher Temperature Porous Graphitic Carbon Separations Differentially Impact Distinct Glycopeptide Classes</h5>
                                 <p class="card-pub-title">Journal of the American Society for Mass Spectrometry</p>
-                                <p class="card-text">Investigations of the optimal chromatographic conditions that promote identification efficiency and optimal
+                                <p class="card-text">
+                                    Investigations of the optimal chromatographic conditions that promote identification efficiency and optimal
                                     liquid phase resolution.
                                 </p>
                                 <a href="https://doi.org/10.1021/jasms.2c00249" target="_blank" class="mt-auto btn btn-primary">Read</a>
@@ -108,19 +124,25 @@
                                 <h5 class="card-title">High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical Capacity in Omics 
                                     Applications and Structural Investigations</h5>
                                 <p class="card-pub-title">Trends in Analytical Chemistry</p>
-                                <p class="card-text">Review of high-end ion mobility instrumentation and their suitability in metabolomics/proteomics investigations,
-                                    as well as their capacity for structural elucidation.</p>
+                                <p class="card-text">
+                                    Review of high-end ion mobility instrumentation and their suitability in metabolomics/proteomics investigations,
+                                    as well as their capacity for structural elucidation.
+                                </p>
                                 <a href="https://doi.org/10.1016/j.trac.2022.116761" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Manuscript/ABC_PGC_2022.png" alt="ABC PGC TOC Figure">
                             <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Complementary proteome and glycoproteome access revealed through comparative 
-                                    analysis of reversed phase and porous graphitic carbon chromatography</h5>
+                                <h5 class="card-title">
+                                    Complementary proteome and glycoproteome access revealed through comparative 
+                                    analysis of reversed phase and porous graphitic carbon chromatography
+                                </h5>
                                     <p class="card-pub-title">Analytical & Bioanalytical Chemistry</p>
-                                    <p class="card-text">First reports of porous graphitic carbon for untargeted glycoproteomics compared
-                                        to traditional reversed phase liquid chromatography.</p>
+                                    <p class="card-text">
+                                        First reports of porous graphitic carbon for untargeted glycoproteomics compared
+                                        to traditional reversed phase liquid chromatography.
+                                    </p>
                                         <a href="https://doi.org/10.1007/s00216-022-03934-7" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
@@ -233,6 +255,12 @@
                     </div>
                     <div class="row">
                         <p class="pub-text">
+                            <b>D.G. Delafield</b>, H.N. Miles, T.N. Liu, W.A. Ricke, L. Li. “Inclusion of Porous Graphitic Carbon Chromatography Yields Greater 
+                            Protein Identification, Compartment and Process Coverage, and Enables More Reflective Protein-Level Label-Free Quantitation.” Published 
+                            online October 10, 2023. <a href="https://doi.org/10.1021/acs.jproteome.3c00373">10.1021/acs.jproteome.3c00373</a>
+                            (In Submission)
+                        </p>
+                        <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2022). “Higher Temperature Porous Graphitic Carbon Separations 
                             Differentially Impact Distinct Glycopeptide Classes.” <i>Journal for the American Society for Mass Spectrometric</i>. Published online
                             November 30, 2022. <a href="https://doi.org/10.1021/jasms.2c00249">10.1021/jasms.2c00249</a>
@@ -265,11 +293,6 @@
                             <b>D.G. Delafield†</b>, X. Zhong†, L. Li. "Sample Agnostic Spectral Libraries Enable Quantitation of >9,300 Cerebrospinal 
                             Fluid Proteins Across Neurodegenerative Disease Patient Cohorts." (In Submission) († Co-First Authors) <a href="https://grahamdelafield.github.io/assets/img/Posters/ChemPoster2022.png">
                             Poster Available</a>
-                        </p>
-                        <p class="pub-text">
-                            <b>D.G. Delafield</b>, H.N. Miles, T.N. Liu, W.A. Ricke, L. Li. “Inclusion of Porous Graphitic Carbon Chromatography Yields Greater 
-                            Protein Identification, Compartment and Process Coverage, and Enables More Reflective Protein-Level Label-Free Quantitation.” 
-                            (In Submission)
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. “Six-plex Isobaric Labeling Reveals Glycosylation Dysregulation Across 
