--- a/portfolio.html
+++ b/portfolio.html
@@ -178,6 +178,16 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/AnCham_Christmas.jpeg" alt="An Chem CHRISTMAS">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Chiral Pair Isobaric Labeling Strategy for Multiplexed Absolute Quantitation (CHRISTMAS) Enabled Quantitatively 
+                                                       Probing of Enantiomeric Amino Acids Alteration in Alzheimer's Disease Progression</h5>
+                                <p class="card-pub-title">Analytical Chemistry</p>
+                                <p class="card-text">Novel method for D-amino acid quantification using IM-MS.</p>
+                                <a href="https://pubs.acs.org/doi/full/10.1021/acs.analchem.3c03847" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Manuscript/NatMeth_SCIMS.png" alt="Single Cell IMaging">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Mass spectrometry imaging: the rise of spatially resolved single-cell omics</h5>
@@ -310,11 +320,6 @@
                             Nervous System of the Atlantic Blue Crab, Callinectes sapidus." <i>Analytical Chemistry</i>. (To Be Submitted).
                         </p>
                         <p class="pub-text">
-                            Z. Zhu, S. Xu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, T. Gu, P. Liu, M. Ma, L. Puglielli, L. Li, 
-                            "Chiral Pair Isobaric Labeling Strategy for Multiplexed Absolute Quantitation (CHRISTMAS) Enabled Quantitatively 
-                            Probing of Enantiomeric Amino Acids Alteration in Alzheimer's Disease Progression." In Submission.
-                        </p>
-                        <p class="pub-text">
                             S. Xu, Z. Zhu, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, L. Puglielli, L. Li, "Spatially and Temporally Probing 
                             Distinctive Glycerophospholipid Alteration In Alzheimer's Disease Mouse Brain Via High-Resolution Ion Mobility-Enabled
                             sn-Position-Resolved Lipidomics." In Submission.
@@ -325,10 +330,15 @@
                             In Submission.
                         </p>
                         <p class="pub-text">
-                            G. Li, C.K. Jeon, M. Ma, Z. Zheng, Y. Jia, Z. Zheng, <b>D.G. Delafield</b>, G. Lu, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
+                            Z. Zhu, S. Xu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, T. Gu, P. Liu, M. Ma, L. Puglielli, L. Li, (2023) 
+                            "Chiral Pair Isobaric Labeling Strategy for Multiplexed Absolute Quantitation (CHRISTMAS) Enabled Quantitatively 
+                            Probing of Enantiomeric Amino Acids Alteration in Alzheimer's Disease Progression," <i>Analytical Chemistry</i>.
+                            Published online November 30, 2023. <a href="https://doi.org/10.1021/acs.analchem.3c03847">10.1021/acs.analchem.3c03847</a>
+                        </p>
+                        <p class="pub-text">
+                            G. Li, C.K. Jeon, M. Ma, Z. Zheng, Y. Jia, Z. Zheng, <b>D.G. Delafield</b>, G. Lu, E. Romanova, J. Sweedler, B. Ruotolo, L. Li, (2023)
                             "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42." <i>Chemical 
-                            Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlelanding/2023/sc/d3sc00678f">
-                            10.1039/D3SC00678F</a>
+                            Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlelanding/2023/sc/d3sc00678f">10.1039/D3SC00678F</a>
                         </p>
                         <p class="pub-text">
                             M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
