adding fragile x, chem neuroscience

--- a/index.html
+++ b/index.html
@@ -393,6 +393,11 @@
                         In Submission.
                     </p>
                     <p class="pub-text">
+                        M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2023) 
+                        “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
+                        Fragile X Syndrome Mouse Model.” Publishbed online December 18, 2023. <a href="https://pubs.acs.org/doi/full/10.1021/acschemneuro.3c00497">10.1021/acschemneuro.3c00497</a>
+                    </p>
+                    <p class="pub-text">
                         Z. Zhu, S. Xu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, T. Gu, P. Liu, M. Ma, L. Puglielli, L. Li, (2023)
                         "Chiral Pair Isobaric Labeling Strategy for Multiplexed Absolute Quantitation (CHRISTMAS) Enabled Quantitatively 
                         Probing of Enantiomeric Amino Acids Alteration in Alzheimer's Disease Progression," <i>Analytical Chemistry</i>.
@@ -402,11 +407,6 @@
                         G. Li, C.K. Jeon, M. Ma, Z. Zheng, Y. Jia, Z. Zheng, <b>D.G. Delafield</b>, G. Lu, E. Romanova, J. Sweedler, B. Ruotolo, L. Li, (2023)
                         "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42." <i>Chemical 
                             Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlelanding/2023/sc/d3sc00678f">10.1039/D3SC00678F</a>
-                    </p>
-                    <p class="pub-text">
-                        M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
-                        “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
-                        Fragile X Syndrome Mouse Model.” (Under Revision). <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
                     </p>
                     <p class="pub-text">
                         H. Zhang, <b>D.G. Delafield</b>, L. Li (2023) "Mass spectrometry imaging: the rise of spatially resolved single-cell omics," <i>Nature Methods</i> 
