--- a/portfolio.html
+++ b/portfolio.html
@@ -167,14 +167,13 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Manuscript/ChemSci_AB42.png" alt="Chem Sci AB42">
+                            <img class="card-img-top" src="assets/img/Manuscript/ChemNeur_FragileX.png" alt="Chem Neuroscience Fragile">
                             <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Site-specific Chirality-conferred Structural Compaction Differentially Mediates the Cytotoxicity 
-                                                       of AB42</h5>
-                                <p class="card-pub-title">Chemical Science</p>
-                                <p class="card-text">Primary research conferring the significance of D-amino acid participation in AB42 oligomerization and their 
-                                    contribution towards cytotoxicity.</p>
-                                <a href="https://pubs.rsc.org/en/content/articlelanding/2023/sc/d3sc00678f" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                                <h5 class="card-title">On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals 
+                                    Soy Consumption-induced Biomarkers in a Fragile X Syndrome Mouse Model</h5>
+                                <p class="card-pub-title">ACS Chemical Neuroscience</p>
+                                <p class="card-text">Evaluation of diet-indeuced proteomic alterations <i>in situ</i>in mouse brains.</p>
+                                <a href="https://pubs.acs.org/doi/full/10.1021/acschemneuro.3c00497" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -185,6 +184,17 @@
                                 <p class="card-pub-title">Analytical Chemistry</p>
                                 <p class="card-text">Novel method for D-amino acid quantification using IM-MS.</p>
                                 <a href="https://pubs.acs.org/doi/full/10.1021/acs.analchem.3c03847" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/ChemSci_AB42.png" alt="Chem Sci AB42">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Site-specific Chirality-conferred Structural Compaction Differentially Mediates the Cytotoxicity 
+                                                       of AB42</h5>
+                                <p class="card-pub-title">Chemical Science</p>
+                                <p class="card-text">Primary research conferring the significance of D-amino acid participation in AB42 oligomerization and their 
+                                    contribution towards cytotoxicity.</p>
+                                <a href="https://pubs.rsc.org/en/content/articlelanding/2023/sc/d3sc00678f" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -330,6 +340,11 @@
                             In Submission.
                         </p>
                         <p class="pub-text">
+                            M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2023) 
+                            “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
+                            Fragile X Syndrome Mouse Model.” Publishbed online December 18, 2023. <a href="https://pubs.acs.org/doi/full/10.1021/acschemneuro.3c00497">10.1021/acschemneuro.3c00497</a>
+                        </p>
+                        <p class="pub-text">
                             Z. Zhu, S. Xu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, T. Gu, P. Liu, M. Ma, L. Puglielli, L. Li, (2023) 
                             "Chiral Pair Isobaric Labeling Strategy for Multiplexed Absolute Quantitation (CHRISTMAS) Enabled Quantitatively 
                             Probing of Enantiomeric Amino Acids Alteration in Alzheimer's Disease Progression," <i>Analytical Chemistry</i>.
@@ -339,11 +354,6 @@
                             G. Li, C.K. Jeon, M. Ma, Z. Zheng, Y. Jia, Z. Zheng, <b>D.G. Delafield</b>, G. Lu, E. Romanova, J. Sweedler, B. Ruotolo, L. Li, (2023)
                             "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42." <i>Chemical 
                             Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlelanding/2023/sc/d3sc00678f">10.1039/D3SC00678F</a>
-                        </p>
-                        <p class="pub-text">
-                            M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
-                            “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
-                            Fragile X Syndrome Mouse Model.” (Under Revision). <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
                         </p>
                         <p class="pub-text">
                             H. Zhang, <b>D.G. Delafield</b>, L. Li (2023) "Mass spectrometry imaging: the rise of spatially resolved single-cell omics," <i>Nature Methods</i> 
