adding new address

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                         <span class="text-primary">Delafield</span>, Ph.D.
                     </h1>
                     <div class="subheading mb-5">
-                        645 Skyview Place · Madison, WI 53713 · (405) 219-4741 ·
+                        228 Duncan Street · San Francisco, CA 94131 · (405) 219-4741 ·
                         <a href="mailto:graham.delafield@gmail.com" style="color: #3a426b;">graham.delafield@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Below is an up-to-date repository of my scientific contributions, posters and presentations. While all
