--- a/index.html
+++ b/index.html
@@ -540,7 +540,39 @@
                             </li>
                             <li>
                                 <span class="fa-li-low"></span>
-                                Protein & peptide identification | Glycan and glycopeptide characterization  
+                                Protein & peptide identification
+                            </li>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Post-Translational Modification Analysis
+                            <li>
+                                <span class="fa-li-low"></span>
+                                Glycan & glycopeptide identification
+                            </li>
+                            <li>
+                                <span class="fa-li-low"></span>
+                                Phosphopeptide identification and localization
+                            </li>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Quantitative Proteomics
+                            <li>
+                                <span class="fa-li-low"></span>
+                                Isobaric labeling relative quantitation
+                            </li>
+                            <li>
+                                <span class="fa-li-low"></span>
+                                Data-dependent & data-independent acquisition label free quantitation
+                            </li>
+                            <li>
+                                <span class="fa-li-low"></span>
+                                Isotopic incorporation & spike-in absolute quantitation
+                            </li>
+                            <li>
+                                <span class="fa-li-low"></span>
+                                Reaction monitoring relative quantitation 
                             </li>
                         </li>
                         <li>
