--- a/index.html
+++ b/index.html
@@ -104,11 +104,20 @@
                             <div class="subheading mb-3">Scientist</div>
                             <ul class="exp-list-head">
                                 <li class="exp-list-item">
-                                    Coming soon!
+                                    Developed and implemented platforms for rapid chemoproteomic screening, increasing throughput 
+                                    by >40x.
+                                </li>
+                                <li class="exp-list-item">
+                                    Implemented affinity selection mass spectrometry assays and bioinformatic pipelines to screen 
+                                    rational design peptides against single protein targets of interest.
+                                </li>
+                                <li class="exp-list-item">
+                                    Coordinated with oncology, cell biology, and other internal collaborators to design, iterate, and 
+                                    implement quantitative and discovery-base proteomic assays specific to an area of interest.
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Employment Commences July 2023</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
