update cv items

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         Anticipating graduation in March, 2023, I am interested in gaining experience in industrial and governmental settings
                         that allow me to exercise my technical expertise and strong communication and leadership skills.
                     </p>
-                    <div class="row">
+                    <div class="row" style="align-content: flex-start;">
                         <div class="social-icons">
                             <a class="social-icon" href="https://www.linkedin.com/in/daniel-graham-delafield-42531871/"><i class="fab fa-linkedin-in"></i></a>
                             <a class="social-icon" href="https://github.com/grahamdelafield"><i class="fab fa-github"></i></a>
@@ -104,16 +104,24 @@
                             <div class="subheading mb-3">Scientist</div>
                             <ul class="exp-list-head">
                                 <li class="exp-list-item">
-                                    Developed and implemented platforms for rapid chemoproteomic screening, increasing throughput 
-                                    by >40x.
+                                    Conceived, optimized and implemented the company-wide standard platform for iterative 
+                                    Affinity Selection Mass Spectrometry (AS-MS).
                                 </li>
                                 <li class="exp-list-item">
-                                    Implemented affinity selection mass spectrometry assays and bioinformatic pipelines to screen 
-                                    rational design peptides against single protein targets of interest.
+                                    Coordinated with protein science and machine learning technology groups to successfully 
+                                    screen up to 1-millionmember peptide libraries against a single protein of interest.
                                 </li>
                                 <li class="exp-list-item">
-                                    Coordinated with oncology, cell biology, and other internal collaborators to design, iterate, and 
-                                    implement quantitative and discovery-base proteomic assays specific to an area of interest.
+                                    Utilized automated liquid handling and isobaric labeling quantitative proteomics to achieve a 
+                                    >96-fold reduction AS-MS screening, analysis, and data output.
+                                </li>
+                                <li>
+                                    Developed chemoproteomic pipeline to identify potent small molecules that disrupt 
+                                    formation of immune complexes.
+                                </li>
+                                <li>
+                                    Spearheaded collaborative quantitative proteomics efforts with oncology researchers to identify glycoproteins
+                                    agonists in tumor metastasis.
                                 </li>
                             </ul>
                         </div>
