--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                                     Utilized automated liquid handling and isobaric labeling quantitative proteomics to achieve a 
                                     >96-fold reduction AS-MS screening, analysis, and data output.
                                 </li>
-                                <li>
+                                <li class="exp-list-item">
                                     Developed chemoproteomic pipeline to identify potent small molecules that disrupt 
                                     formation of immune complexes.
                                 </li>
-                                <li>
+                                <li class="exp-list-item">
                                     Spearheaded collaborative quantitative proteomics efforts with oncology researchers to identify glycoproteins
                                     agonists in tumor metastasis.
                                 </li>
