--- a/index.html
+++ b/index.html
@@ -400,14 +400,14 @@
                         Native Glycoproteome Characterization for Immune Disorders Using Ion Mobility-Assisted Mass Spectrometry." In Submission.
                     </p>
                     <p class="pub-text">
-                        S. Xu, Z. Zhu, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, L. Puglielli, L. Li, "Spatially and Temporally Probing 
-                        Distinctive Glycerophospholipid Alteration In Alzheimer's Disease Mouse Brain Via High-Resolution Ion Mobility-Enabled
-                        sn-Position-Resolved Lipidomics." In Submission.
-                    </p>
-                    <p class="pub-text">
                         S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved Quantification 
                         of Aminophospholipids in Alzheimer's Disease Progression by Isotopic N, N-dimethyl leucine Labeling and High-resolution Ion Mobility Mass Spectrometry." 
                         In Submission.
+                    </p>
+                    <p class="pub-text">
+                        S. Xu, Z. Zhu, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, L. Puglielli, L. Li, "Spatially and Temporally Probing 
+                        Distinctive Glycerophospholipid Alteration In Alzheimer's Disease Mouse Brain Via High-Resolution Ion Mobility-Enabled
+                        sn-Position-Resolved Lipidomics." Published online July 24, 2024. <a href="https://www.nature.com/articles/s41467-024-50299-9" class="hre"></a>
                     </p>
                     <p class="pub-text">
                         M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2023) 
