adding analytical chemistr, sn lipids

--- a/index.html
+++ b/index.html
@@ -396,6 +396,11 @@
                         Nervous System of the Atlantic Blue Crab, Callinectes sapidus." <i>Analytical Chemistry</i>. (To Be Submitted).
                     </p>
                     <p class="pub-text">
+                        S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved 
+                        Quantification of Aminophospholipids by Isotopic N, N-Dimethyl Leucine Labeling and High-resolution Ion Mobility Mass Spectrometry."
+                        In Submission.
+                    </p>
+                    <p class="pub-text">
                         X. Sun, <b>D.G. Delafield</b>, F. Hu, J. Cheng, D.D.Y. Chen, H. Zhang, X. Huang, L. Li, Z. Li, Y. Chen, C.C.L. Wong, "Enhanced 
                         Native Glycoproteome Characterization for Immune Disorders Using Ion Mobility-Assisted Mass Spectrometry." In Submission.
                     </p>
