adding AnChem Aminophos

--- a/index.html
+++ b/index.html
@@ -396,23 +396,19 @@
                         Nervous System of the Atlantic Blue Crab, Callinectes sapidus." <i>Analytical Chemistry</i>. (To Be Submitted).
                     </p>
                     <p class="pub-text">
-                        S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved 
-                        Quantification of Aminophospholipids by Isotopic N, N-Dimethyl Leucine Labeling and High-resolution Ion Mobility Mass Spectrometry."
-                        In Submission.
-                    </p>
-                    <p class="pub-text">
                         X. Sun, <b>D.G. Delafield</b>, F. Hu, J. Cheng, D.D.Y. Chen, H. Zhang, X. Huang, L. Li, Z. Li, Y. Chen, C.C.L. Wong, "Enhanced 
                         Native Glycoproteome Characterization for Immune Disorders Using Ion Mobility-Assisted Mass Spectrometry." In Submission.
                     </p>
                     <p class="pub-text">
-                        S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved Quantification 
-                        of Aminophospholipids in Alzheimer's Disease Progression by Isotopic N, N-dimethyl leucine Labeling and High-resolution Ion Mobility Mass Spectrometry." 
-                        In Submission.
+                        S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved 
+                        Quantification of Aminophospholipids by Isotopic N, N-Dimethyl Leucine Labeling and High-resolution Ion Mobility Mass Spectrometry."
+                        Published online December 4, 2024. <a href="https://pubs.acs.org/doi/10.1021/acs.analchem.4c05107" class="hre">10.1021/acs.analchem.4c05107</a>
                     </p>
                     <p class="pub-text">
                         S. Xu, Z. Zhu, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, L. Puglielli, L. Li, "Spatially and Temporally Probing 
                         Distinctive Glycerophospholipid Alteration In Alzheimer's Disease Mouse Brain Via High-Resolution Ion Mobility-Enabled
-                        sn-Position-Resolved Lipidomics." Published online July 24, 2024. <a href="https://www.nature.com/articles/s41467-024-50299-9" class="hre"></a>
+                        sn-Position-Resolved Lipidomics." Published online July 24, 2024. <a href="https://www.nature.com/articles/s41467-024-50299-9" class="hre">
+                        10.1038/s41467-024-50299-9</a>
                     </p>
                     <p class="pub-text">
                         M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2023) 
