--- a/portfolio.html
+++ b/portfolio.html
@@ -167,6 +167,17 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/AnChem_Aminophospho.jpeg" alt="Anal. Chem. Aminophospholipids">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">sn-position Resolved Quantification of Aminophospholipids by Isotopic N, N-Dimethyl Leucine Labeling 
+                                    and High-resolution Ion Mobility Mass Spectrometry</h5>
+                                <p class="card-pub-title">Analytical Chemistry</p>
+                                <p class="card-text">Extension of the previously-developed IM-MS method to distinguish structural peptide isomers into 
+                                    aminophospholipid analysis.</p>
+                                <a href="https://pubs.acs.org/doi/10.1021/acs.analchem.4c05107" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Manuscript/NatComm_GPLipids.png" alt="Nat. Comm. Image">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Spatially and Temporally Probing Distinctive Glycerophospholipid Alteration In Alzheimer's 
@@ -337,18 +348,13 @@
                             Nervous System of the Atlantic Blue Crab, Callinectes sapidus." <i>Analytical Chemistry</i>. (To Be Submitted).
                         </p>
                         <p class="pub-text">
-                            S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved 
-                            Quantification of Aminophospholipids by Isotopic N, N-Dimethyl Leucine Labeling and High-resolution Ion Mobility Mass Spectrometry."
-                            In Submission.
-                        </p>
-                        <p class="pub-text">
                             X. Sun, <b>D.G. Delafield</b>, F. Hu, J. Cheng, D.D.Y. Chen, H. Zhang, X. Huang, L. Li, Z. Li, Y. Chen, C.C.L. Wong, "Enhanced 
                             Native Glycoproteome Characterization for Immune Disorders Using Ion Mobility-Assisted Mass Spectrometry." In Submission.
                         </p>
                         <p class="pub-text">
-                            S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved Quantification 
-                            of Aminophospholipids in Alzheimer's Disease Progression by Isotopic N, N-dimethyl leucine Labeling and High-resolution Ion Mobility Mass Spectrometry." 
-                            In Submission.
+                            S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved 
+                            Quantification of Aminophospholipids by Isotopic N, N-Dimethyl Leucine Labeling and High-resolution Ion Mobility Mass Spectrometry."
+                            Published online December 4, 2024. <a href="https://pubs.acs.org/doi/10.1021/acs.analchem.4c05107" class="hre">10.1021/acs.analchem.4c05107</a>
                         </p>
                         <p class="pub-text">
                             S. Xu, Z. Zhu, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, L. Puglielli, L. Li, "Spatially and Temporally Probing 
