update journal titles, links

--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
                     <div class="row">
                         <button type="button" class="btn btn-primary">
                             <a class="button-text" href="assets/DanielGDelafield_Resume.pdf" download="DanielGDelafield_Resume">
-                            My Resume
+                            Resume
                             </a>
                         </button>
                         <button type="button" class="btn btn-primary" style="margin-left: 2rem;">
                             <a class="button-text" href="assets/CV_GrahamDelafield.pdf" download="CV_GrahamDelafield">
-                            Download CV
+                            CV
                             </a>
                         </button>
                         <button type="button" class="btn btn-primary" style="margin-left: 2rem;">
-                            <a class="button-text" href="https://www.lilabs.org">
-                            My Research Group
+                            <a class="button-text" href="https://www.calicolabs.com/">
+                            My Research 
                             </a>
                         </button>
                     </div>
@@ -104,24 +104,24 @@
                             <div class="subheading mb-3">Scientist</div>
                             <ul class="exp-list-head">
                                 <li class="exp-list-item">
-                                    Conceived, optimized and implemented the company-wide standard platform for iterative 
-                                    Affinity Selection Mass Spectrometry (AS-MS).
+                                    Initiated and validated an automated platform for Affinity-Selection Mass-Spectrometry (AS-MS) enabling >24x 
+                                    higher throughput in peptide therapeutic discovery.
                                 </li>
                                 <li class="exp-list-item">
-                                    Coordinated with protein science and machine learning technology groups to successfully 
-                                    screen up to 1-millionmember peptide libraries against a single protein of interest.
+                                    Applied AS-MS platform to screen >7,000,000 rational design peptide candidates against 8 different targets of 
+                                    interest with 4 yielding high affinity candidates.
                                 </li>
                                 <li class="exp-list-item">
-                                    Utilized automated liquid handling and isobaric labeling quantitative proteomics to achieve a 
-                                    >96-fold reduction AS-MS screening, analysis, and data output.
+                                    Utilized TMT-based quantitative proteomics for high-throughput validation of target engagement in peptide-protein 
+                                    and library-protein interactions.
                                 </li>
                                 <li class="exp-list-item">
-                                    Developed chemoproteomic pipeline to identify potent small molecules that disrupt 
-                                    formation of immune complexes.
+                                    Developed in vitro stability and preliminary PKDM assays to rapidly assess peptide bioavailability across plasma, 
+                                    gastrointestinal fluids, microsomes, and cell media.
                                 </li>
                                 <li class="exp-list-item">
-                                    Spearheaded collaborative quantitative proteomics efforts with oncology researchers to identify glycoproteins
-                                    agonists in tumor metastasis.
+                                    Employed quantitative proteomics and lectin-based glycopeptide enrichment for identification of protein targets
+                                    promoting tumor metastasis.
                                 </li>
                             </ul>
                         </div>
@@ -402,18 +402,20 @@
                     <p class="pub-text">
                         S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved 
                         Quantification of Aminophospholipids by Isotopic N, N-Dimethyl Leucine Labeling and High-resolution Ion Mobility Mass Spectrometry."
-                        Published online December 4, 2024. <a href="https://pubs.acs.org/doi/10.1021/acs.analchem.4c05107" class="hre">10.1021/acs.analchem.4c05107</a>
+                        <i>Analytical Chemistry</i>. Published online December 4, 2024. <a href="https://pubs.acs.org/doi/10.1021/acs.analchem.4c05107" class="hre">
+                        10.1021/acs.analchem.4c05107</a>
                     </p>
                     <p class="pub-text">
                         S. Xu, Z. Zhu, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, L. Puglielli, L. Li, "Spatially and Temporally Probing 
                         Distinctive Glycerophospholipid Alteration In Alzheimer's Disease Mouse Brain Via High-Resolution Ion Mobility-Enabled
-                        sn-Position-Resolved Lipidomics." Published online July 24, 2024. <a href="https://www.nature.com/articles/s41467-024-50299-9" class="hre">
+                        sn-Position-Resolved Lipidomics." <i>Nature Communications</i>. Published online July 24, 2024. <a href="https://www.nature.com/articles/s41467-024-50299-9" class="hre">
                         10.1038/s41467-024-50299-9</a>
                     </p>
                     <p class="pub-text">
                         M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2023) 
                         “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
-                        Fragile X Syndrome Mouse Model.” Publishbed online December 18, 2023. <a href="https://pubs.acs.org/doi/full/10.1021/acschemneuro.3c00497">10.1021/acschemneuro.3c00497</a>
+                        Fragile X Syndrome Mouse Model.” <i>ACS Chemical Neuroscience</i>. Publishbed online December 18, 2023. <a href="https://pubs.acs.org/doi/full/10.1021/acschemneuro.3c00497">
+                        10.1021/acschemneuro.3c00497</a>
                     </p>
                     <p class="pub-text">
                         Z. Zhu, S. Xu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, T. Gu, P. Liu, M. Ma, L. Puglielli, L. Li, (2023)
