--- a/portfolio.html
+++ b/portfolio.html
@@ -354,17 +354,20 @@
                         <p class="pub-text">
                             S. Xu, Z. Zhu, T.J. Gu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, M. Ma, P. Liu, L. Puglielli, L. Li, "sn-position Resolved 
                             Quantification of Aminophospholipids by Isotopic N, N-Dimethyl Leucine Labeling and High-resolution Ion Mobility Mass Spectrometry."
-                            Published online December 4, 2024. <a href="https://pubs.acs.org/doi/10.1021/acs.analchem.4c05107" class="hre">10.1021/acs.analchem.4c05107</a>
+                            <i>Analytical Chemistry</i>. Published online December 4, 2024. <a href="https://pubs.acs.org/doi/10.1021/acs.analchem.4c05107" class="hre">
+                            10.1021/acs.analchem.4c05107</a>
                         </p>
                         <p class="pub-text">
                             S. Xu, Z. Zhu, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, L. Puglielli, L. Li, "Spatially and Temporally Probing 
                             Distinctive Glycerophospholipid Alteration In Alzheimer's Disease Mouse Brain Via High-Resolution Ion Mobility-Enabled
-                            sn-Position-Resolved Lipidomics." Published online July 24, 2024. <a href="https://www.nature.com/articles/s41467-024-50299-9" class="hre"></a>
-                        </p>
+                            sn-Position-Resolved Lipidomics." <i>Nature Communications</i>. Published online July 24, 2024. <a href="https://www.nature.com/articles/s41467-024-50299-9" class="hre">
+                            10.1038/s41467-024-50299-9</a>
+                        </p>    
                         <p class="pub-text">
                             M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2023) 
                             “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
-                            Fragile X Syndrome Mouse Model.” Publishbed online December 18, 2023. <a href="https://pubs.acs.org/doi/full/10.1021/acschemneuro.3c00497">10.1021/acschemneuro.3c00497</a>
+                            Fragile X Syndrome Mouse Model.” <i>ACS Chemical Neuroscience</i>. Publishbed online December 18, 2023. <a href="https://pubs.acs.org/doi/full/10.1021/acschemneuro.3c00497">
+                            10.1021/acschemneuro.3c00497</a>
                         </p>
                         <p class="pub-text">
                             Z. Zhu, S. Xu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, T. Gu, P. Liu, M. Ma, L. Puglielli, L. Li, (2023) 
